# 24-OSS-Gruop47

./: README.md  Sentiment_analysis.ipynb
201835457 박재민/: READMD.md  pyproject.toml  requirements.txt  setup.py
201835457 박재민/src/: analyze.py  gps.py  main.py  nlp.py  ocr.py  preprocess.py  requirements.txt
201835457 박재민/src/insert_data/: compliance_risks.txt  legal_risks.docx  legal_risks.docx.docx
202235083 이민지/: README.md
202235083 이민지/data/: sample_texts.txt
202434641 유정규/: README.md  requirements.txt
202434641 유정규/src/: mosaic.py
